<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:gravity="center_horizontal">
    
        <TextView style="@style/text_view_bold" android:text="@string/volumetric_title" android:textColor="#ffffff" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="center_horizontal" android:weightSum="100">
    
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
             
        	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="33">
        	    <TextView style="@style/text_view" android:text="@string/volumetric_eye_x" 
        	    android:paddingRight="5dip" android:textColor="#ffffff" android:layout_gravity="center_horizontal"/>
        	
        		<EditText style="@style/edit_text" android:id="@+volumetric/eye_x" android:paddingLeft="5dip" android:inputType="numberDecimal|numberSigned" android:text="3"/>
        	</LinearLayout>
        	
        	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="33">
        	    <TextView style="@style/text_view" android:text="@string/volumetric_eye_y" 
        	    android:paddingRight="5dip" android:textColor="#ffffff" android:layout_gravity="center_horizontal"/>
        	
        		<EditText style="@style/edit_text" android:id="@+volumetric/eye_y" android:paddingLeft="5dip" android:inputType="numberDecimal|numberSigned" android:text="3"/>
        	</LinearLayout>
        	
        	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="33">
        	    <TextView style="@style/text_view" android:text="@string/volumetric_eye_z" 
        	    android:paddingRight="5dip" android:textColor="#ffffff" android:layout_gravity="center_horizontal"/>
        	
        		<EditText style="@style/edit_text" android:id="@+volumetric/eye_z" android:paddingLeft="5dip" android:inputType="numberDecimal|numberSigned" android:text="3"/>
        	</LinearLayout>
	       	
        </LinearLayout>        
                
    </LinearLayout>
	
    <Button style="@style/button" android:text="@string/volumetric_btn_abrir" android:id="@+volumetric/button" android:layout_width="match_parent"/>
    
    <TextView style="@style/text_view_bold" android:id="@+volumetric/patient_name" android:paddingTop="15dip" android:textColor="#ffffff"/>
    
    <TextView style="@style/text_view_bold" android:id="@+volumetric/image_number" android:paddingTop="3dip" android:textColor="#ffffff"/>
    

</LinearLayout>